# Handsoff

./: .gitignore  AGENTS.md  Plan.md  README.md  export_20260426-085201.csv  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: handsoff.rb
extension/: README.md  package-lock.json  package.json
extension/src/: extension.ts
rust/: Cargo.toml
rust/crates/adapters/: Cargo.toml
rust/crates/adapters/src/: lib.rs
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: hook.rs  lib.rs  main.rs  setup.rs
rust/crates/cli/src/reduce/: cargo_test.rs  git_diff.rs  mod.rs
rust/crates/cli/src/tui/: agents.rs  events.rs  mod.rs  timeline.rs
rust/crates/cli/tests/: setup_test.rs
rust/crates/common/: Cargo.toml
rust/crates/common/src/: lib.rs  paths.rs  tee.rs  types.rs
rust/crates/context/: Cargo.toml
rust/crates/context/src/: conversations.rs  default_config.toml  intent.rs  lib.rs
rust/crates/context/src/sources/: git.rs  mod.rs  shell.rs  tests.rs
rust/crates/critic/: Cargo.toml
rust/crates/critic/src/: critic_system.txt  diff.rs  lib.rs  summarizer_system.txt  watch.rs  worker_system.txt
rust/crates/daemon/: Cargo.toml
rust/crates/daemon/src/: failover.rs  lib.rs  spawn.rs  worktree.rs
rust/crates/daemon/tests/: critic_run_rpc_test.rs  failover_e2e_test.rs  simulate_test.rs  worktree_test.rs
rust/crates/policy/: Cargo.toml
rust/crates/policy/src/: lib.rs
rust/crates/proxy/: Cargo.toml
rust/crates/proxy/src/: ca.rs  lib.rs  pidlookup.rs
rust/crates/storage/: Cargo.toml
rust/crates/storage/src/: lib.rs
scripts/: release-local.sh
src/handoff/: paths.py
src/handoff/adapters/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py
src/handoff/cli/: main.py
src/handoff/context/: __init__.py  engine.py
src/handoff/critic/: __init__.py  runner.py  watch.py
src/handoff/daemon/: eventbus.py  failover.py  server.py  spawn.py
src/handoff/proxy/: addon.py  pidlookup.py
src/handoff/storage/: __init__.py  db.py
tests/: test_adapters.py  test_context_engine.py  test_critic_runner.py  test_critic_summarizer.py  test_daemon_endpoints.py  test_eventbus.py  test_failover.py  test_request_counts.py  test_storage.py  test_watch_loop.py
