[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handoff"
version = "0.2.0"
description = "Multi-agent orchestration CLI: observe, meter, and hand off across coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "0xedev" }]
dependencies = [
    "mitmproxy>=10.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "psutil>=5.9",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
handoff = "handoff.cli.main:app"
handoff-proxy-addon = "handoff.proxy.addon:run"

[tool.hatch.build.targets.wheel]
packages = ["src/handoff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
