[package]
name = "handoff-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "handoff_cli"
path = "src/lib.rs"

[[bin]]
name = "handoff"
path = "src/main.rs"

[dependencies]
handoff-common.workspace = true
handoff-storage.workspace = true
handoff-adapters.workspace = true
handoff-context.workspace = true
handoff-policy.workspace = true
handoff-daemon = { path = "../daemon" }
handoff-critic = { path = "../critic" }
handoff-proxy = { path = "../proxy" }
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
which = "6"
dirs = "6"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
