[package]
name = "handoff-context"
version.workspace = true
edition.workspace = true

[dependencies]
handoff-common.workspace = true
handoff-adapters.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
once_cell.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
