[package]
name = "handoff-critic"
version.workspace = true
edition.workspace = true

[dependencies]
handoff-common.workspace = true
handoff-context.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
