[package]
name = "handoff-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
handoff-common.workspace = true
handoff-storage.workspace = true
handoff-adapters.workspace = true
handoff-context.workspace = true
handoff-policy.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
