[package]
name = "handoff-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
handoff-common.workspace = true
handoff-storage.workspace = true
handoff-adapters.workspace = true
handoff-context.workspace = true
handoff-policy.workspace = true
handoff-critic.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
rusqlite = { workspace = true }
axum-test = "20.0.0"
