[package]
name = "handoff-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
handoff-common.workspace = true
handoff-adapters.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true

# MITM proxy stack
hudsucker = { version = "0.23", features = ["rustls-client", "rcgen-ca"] }
http = "1"
http-body-util = "0.1"
rcgen = "0.13"
chrono.workspace = true
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
