[package]
name = "handoff-storage"
version.workspace = true
edition.workspace = true

[dependencies]
handoff-common.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
